--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://kaykayale.github.io/portfolio",
+  "homepage": "https://kaykayale.com",
   "private": false,
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.3",
